Refactorización de helpers

--- a/views/actividad/actividad-calificar-individual.hbs
+++ b/views/actividad/actividad-calificar-individual.hbs
@@ -40,4 +40,4 @@
         </form>
     </div>
 </div>
-<script src="/js/grid-calificacion-individual-helper.js"></script>
+<script src="/js/llenar-tabla-helper.js"></script>
