--- a/views/calificacion/vista-grupo-calificaciones.hbs
+++ b/views/calificacion/vista-grupo-calificaciones.hbs
@@ -69,4 +69,4 @@
         </main>
     </div>
 </div>
-<script src="/js/vista-calificaciones-individual-helper.js"></script>
+<script src="/js/llenar-tabla-helper.js"></script>
