--- a/views/alumno/grid-alumnos.hbs
+++ b/views/alumno/grid-alumnos.hbs
@@ -95,7 +95,7 @@
         </form>
     {{/ifeq}}
 </div>
+<script src="/js/llenar-tabla-helper.js"></script>
 
-<script src="/js/grid-alumnos-helper.js"></script>
 </body>
 
