Refactorización de helpers

--- a/views/alumno/vista-grupo-alumnos.hbs
+++ b/views/alumno/vista-grupo-alumnos.hbs
@@ -217,4 +217,4 @@
 
 </script>
 
-<script src="/js/vista-calificaciones-individual-helper.js"></script>
+<script src="/js/llenar-tabla-helper.js"></script>
