--- a/views/actividad/vista-grupo-actividades.hbs
+++ b/views/actividad/vista-grupo-actividades.hbs
@@ -1,6 +1,7 @@
 <title>{{asignatura}} {{clave}} - Actividades - Seguimiento de Estudiantes</title>
-<div class="container-fluid p-2 bg-light">
-    <!-- Barra de navegación -->
+
+<!-- Barra de navegación -->
+<div class="row container-fluid">
     <ul class="nav nav-tabs">
 
         <li class="nav-item">
@@ -20,62 +21,47 @@
             <a class="nav-link " title="Muestra las calificaciones almacenadas." href="/grupo/calificaciones/{{idgrupo}}"><i class="bi bi-file-spreadsheet-fill"  ></i>
                 Calificaciones</a>
         </li>
-
     </ul>
-    <!-- Titulo de la vista -->
-    <div class="row m-2 p-2">
-        <h2 class="">Actividades</h2>
-    </div>
-    <div class="row m-2 p-2">
-        <a class="btn btn-info m-1" href="/grupo/actividades/{{idgrupo}}"><i class="bi bi-book-half"></i> Todas</a>
-        {{#each temas}}
-            <a class="btn btn-info m-1" href="/grupo/actividades/{{../idgrupo}}/{{dataValues.id}}"><i
-                    class="bi bi-book-half"></i> {{dataValues.nombre}}</a>
-        {{/each}}
-    </div>
+</div>
+<div class="row m-2 p-2">
 
-    <div class="row m-2 p-2">
-        <div class="col-5">
-            <div class="list-group">
-                {{#each actividades}}
+    <nav id="sideBar" class="col-md-3 col-lg-3 d-md-block bg-light sidebar"
+         role="navigation">
+        <div class="sidebar-sticky pt-3 nav d-flex flex-column navbar-nav-scroll nav-fill">
+            <ul class="list-group  border-bottom h-auto">
+                {{#each datos}}
+                    <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center font-italic font-weight-bold">{{tema.numerotema}}. {{tema.nombre}}<span class="badge bi bi-book-fill"> </span></li>
+                    {{#each actividades}}
+                        <a class="list-group-item list-group-item-action button-sm" href="/grupo/actividades/{{../../idgrupo}}/{{../tema.id}}/{{dataValues.id}}">{{dataValues.nombre}}</a>
+                    {{/each}}
                     <a class="list-group-item list-group-item-action"
-                       href="/grupo/actividades/{{../idgrupo}}/{{../idtema}}/{{dataValues.id}}"><i
-                            class="bi bi-bookmark-fill"></i> {{dataValues.nombre}}</a>
-                {{else}}
-                    <a class="list-group-item list-group-item-action disabled">El tema no tiene actividades
-                        asignadas</a>
-                {{/each}}
-                {{#iflogico idtema '!=' ''}}
-                    <a class="list-group-item list-group-item-action"
-                       href="/actividad/nueva-actividad/{{idgrupo}}/{{idtema}}"><i class="bi bi-bookmark-plus-fill"></i>
+                       href="/actividad/nueva-actividad/{{../idgrupo}}/{{tema.id}}"><i class="bi bi-plus"></i>
                         Nueva Actividad</a>
-                {{else}}
-                    <a class="list-group-item" data-toggle="popover" title="Información"
-                       data-content="Seleccione un tema para agregar actividades."><i
-                            class="bi bi-bookmark-plus-fill"></i> Nueva Actividad</a>
-                {{/iflogico}}
-            </div>
+                {{/each}}
+            </ul>
         </div>
-        <div class="col">
-            <div class="container bg-white">
-                {{#if actividad}}
-                    <div class="card">
-                        <div class="card-header">
-                            <div class="row">
-                                <div class="col">
-                                    <h4>Datos de la actividad</h4>
-                                </div>
-                                <div class="col-11" align="right">
-                                    <div class="custom-control custom-switch" title="Habilitar edición de la actividad.">
-                                        <input type="checkbox" class="custom-control-input" id="switchEditar" >
-                                        <label class="custom-control-label" for="switchEditar">Editar</label>
-                                    </div>
-                                </div>
-                                <div class="col" align="right">
-                                    <a class="bi bi-trash-fill" data-toggle="modal"
-                                       data-target="#eliminarActividadModal" title="Eliminar actividad del tema/unidad."></a>
+    </nav>
+    <div class="col">
+        <div class="container bg-white">
+            {{#if actividad}}
+                <div class="card">
+                    <div class="card-header">
+                        <div class="row">
+                            <div class="col">
+                                <h4>Datos de la actividad</h4>
+                            </div>
+                            <div class="col-11" align="right">
+                                <div class="custom-control custom-switch" title="Habilitar edición de la actividad.">
+                                    <input type="checkbox" class="custom-control-input" id="switchEditar">
+                                    <label class="custom-control-label" for="switchEditar">Editar</label>
                                 </div>
                             </div>
+                            <div class="col" align="right">
+                                <a class="bi bi-trash-fill" data-toggle="modal"
+                                   data-target="#eliminarActividadModal"
+                                   title="Eliminar actividad del tema/unidad."></a>
+                            </div>
+                        </div>
 
                         </div>
                         <!--Inicio Form -->
