Cambio de la vista de actividades, mejora en la presentación de los temas y configuración necesaria en las rutas

--- a/views/actividad/actividad-nuevo.hbs
+++ b/views/actividad/actividad-nuevo.hbs
@@ -74,7 +74,7 @@
         </div>
         <div class="row d-flex flex-row-reverse p-2 m-2">
             <button class="btn btn-primary" button-align="right" type="submit">Guardar</button>
-            <a class="btn btn-danger" a-align="right" href="/grupo/actividades/{{idgrupo}}/{{idtema}}" role="button">Cancelar</a>
+            <a class="btn btn-danger" a-align="right" href="/grupo/actividades/{{idgrupo}}" role="button">Cancelar</a>
         </div>
     </form>
 </div>
