--- a/views/grupo/vista-inicio-grupo.hbs
+++ b/views/grupo/vista-inicio-grupo.hbs
@@ -1,5 +1,5 @@
 <title>{{grupo.dataValues.asignatura}} {{grupo.dataValues.clave}} - Inicio - Seguimiento de Estudiantes</title>
-<div class="container-fluid bg-light p-2" style="height: content-box">
+<div class="row container-fluid">
     <!-- Barra de navegación -->
     <ul class="nav nav-tabs">
         <li class="nav-item">
@@ -20,10 +20,7 @@
                 Calificaciones</a>
         </li>
     </ul>
-    <!-- Titulo de la vista -->
-    <div class="row m-2 ">
-        <h2 class="">{{grupo.dataValues.clave}} - {{grupo.dataValues.asignatura}}</h2>
-    </div>
-
-    <!-- Contenido de la vista -->
+</div>
+<div class="row m-2 p-2">
+    <h2 class="">{{grupo.dataValues.clave}} - {{grupo.dataValues.asignatura}}</h2>
 </div>
