--- a/views/tema/vista-grupo-temas.hbs
+++ b/views/tema/vista-grupo-temas.hbs
@@ -1,6 +1,6 @@
 <title>{{asignatura}} {{clave}} - Temas - Seguimiento de Estudiantes</title>
 
-<div class="container-fluid p-2 bg-light">
+<div class="row container-fluid">
     <!-- Barra de navegación -->
     <ul class="nav nav-tabs">
 
@@ -24,160 +24,156 @@
 
     </ul>
     <!-- Titulo de la vista -->
-    <div class="row m-2 p-2">
-        <h2>Temas</h2>
-    </div>
-    <!-- Contenido de la vista -->
-    <div class="row m-2 p-2">
-        <!-- Generación de un card por tema -->
-        {{#each tema}}
-            <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3 p-1">
-                <div class="card" style="height:14rem;">
-                    <div class="card-header d-flex flex-row-reverse">
-                        <a class="bi bi-trash-fill " align="right"  data-toggle="modal"
-                           data-target="#eliminarTemaModal{{dataValues.id}}" title="Eliminar el tema permanentemente."></a>
-                        <a class="bi bi-pencil-square " align="right" data-toggle="modal"
-                           data-target="#editarTemaModal{{dataValues.id}}" title="Editar el tema."></a>
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">{{dataValues.numerotema}}. {{dataValues.nombre}}</h5>
-                    </div>
-                    <div class="card-footer">
-                        <a href="/grupo/actividades/{{dataValues.idgrupo}}/{{dataValues.id}}" class="btn btn-primary">Actividades</a>
-                    </div>
-                </div>
-            </div>
-            <!--Modal de edición -->
-            <form action="/tema/editar-tema/{{dataValues.idgrupo}}/{{dataValues.id}}?_method=PUT" method="POST"
-                  novalidate>
-                <input type="hidden" name="_method" value="PUT">
-                <div class="modal fade" id="editarTemaModal{{dataValues.id}}" tabindex="-1" aria-labelledby="editarTemaModal{{dataValues.id}}"
-                     aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="editarTemaModalLabel">Editar Tema</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                <form>
-                                    <div class="form-group">
-                                        <label for="recipient-name" class="col-form-label">Unidad:</label>
-                                        <input type="number" min="1" class="form-control" id="unidad" name="unidad"
-                                               value="{{dataValues.numerotema}}">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="message-text" class="col-form-label">Nombre:</label>
-                                        <input class="form-control" id="nombre" name="nombre"
-                                               value="{{dataValues.nombre}}"></input>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="modal-footer">
-                                <a type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</a>
-                                <button type="submit" class="btn btn-primary">Guardar</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </form>
-
-            <form action="/tema/eliminar-tema/{{../idgrupo}}/{{dataValues.id}}?_method=DELETE" method="POST">
-                <input type="hidden" name="_method" value="DELETE">
-                <!--Modal de eliminación -->
-                <div class="modal fade" id="eliminarTemaModal{{dataValues.id}}" tabindex="-1" aria-labelledby="eliminarTemaModal{{dataValues.id}}"
-                     aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="eliminarTemaLabel">Eliminar tema</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                ¿Está seguro que desea eliminar el tema? Se eliminará permanentemente junto con las
-                                actividades
-                                relacionadas a él.
-                            </div>
-                            <div class="modal-footer">
-                                <a class="btn btn-secondary" data-dismiss="modal">Cancelar</a>
-                                <button type="submit" class="btn btn-danger">Eliminar</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </form>
-
-            <!-- En caso de que no existan temas se despliega un card con un mensaje -->
-        {{else}}
-            <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3 p-1">
-                <div class="card" style="height:14rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">No hay temas existentes en este grupo.</h5>
-                        <p class="card-text">Agregue un tema.</p>
-                    </div>
-                </div>
-            </div>
-        {{/each}}
-
-        <!-- Card fija para la creación de un grupo -->
+</div>
+<!-- Contenido de la vista -->
+<div class="row m-2 p-2">
+    <!-- Generación de un card por tema -->
+    {{#each tema}}
         <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3 p-1">
             <div class="card" style="height:14rem;">
-                <div class="card-body justify-content-center align-center">
-                    <div class="row justify-content-center align-items-center">
-                        <h5 class="card-title">Nuevo tema</h5>
+                <div class="card-header d-flex flex-row-reverse">
+                    <a class="bi bi-trash-fill " align="right"  data-toggle="modal"
+                       data-target="#eliminarTemaModal{{dataValues.id}}" title="Eliminar el tema permanentemente."></a>
+                    <a class="bi bi-pencil-square " align="right" data-toggle="modal"
+                       data-target="#editarTemaModal{{dataValues.id}}" title="Editar el tema."></a>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">{{dataValues.numerotema}}. {{dataValues.nombre}}</h5>
+                </div>
+                <div class="card-footer">
+                    <a href="/grupo/actividades/{{dataValues.idgrupo}}" class="btn btn-primary">Actividades</a>
+                </div>
+            </div>
+        </div>
+        <!--Modal de edición -->
+        <form action="/tema/editar-tema/{{dataValues.idgrupo}}/{{dataValues.id}}?_method=PUT" method="POST"
+              novalidate>
+            <input type="hidden" name="_method" value="PUT">
+            <div class="modal fade" id="editarTemaModal{{dataValues.id}}" tabindex="-1" aria-labelledby="editarTemaModal{{dataValues.id}}"
+                 aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="editarTemaModalLabel">Editar Tema</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <div class="form-group">
+                                    <label for="recipient-name" class="col-form-label">Unidad:</label>
+                                    <input type="number" min="1" class="form-control" id="unidad" name="unidad"
+                                           value="{{dataValues.numerotema}}">
+                                </div>
+                                <div class="form-group">
+                                    <label for="message-text" class="col-form-label">Nombre:</label>
+                                    <input class="form-control" id="nombre" name="nombre"
+                                           value="{{dataValues.nombre}}">
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <a type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</a>
+                            <button type="submit" class="btn btn-primary">Guardar</button>
+                        </div>
                     </div>
-                    <div class="row justify-content-md-center align-items-center">
-                        <a class="btn btn-success" href="/tema/nuevo-tema/{{idgrupo}}" title="Agregar un tema de forma manual.">Agregar tema</a>
+                </div>
+            </div>
+        </form>
+
+        <form action="/tema/eliminar-tema/{{../idgrupo}}/{{dataValues.id}}?_method=DELETE" method="POST">
+            <input type="hidden" name="_method" value="DELETE">
+            <!--Modal de eliminación -->
+            <div class="modal fade" id="eliminarTemaModal{{dataValues.id}}" tabindex="-1" aria-labelledby="eliminarTemaModal{{dataValues.id}}"
+                 aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="eliminarTemaLabel">Eliminar tema</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            ¿Está seguro que desea eliminar el tema? Se eliminará permanentemente junto con las
+                            actividades
+                            relacionadas a él.
+                        </div>
+                        <div class="modal-footer">
+                            <a class="btn btn-secondary" data-dismiss="modal">Cancelar</a>
+                            <button type="submit" class="btn btn-danger">Eliminar</button>
+                        </div>
                     </div>
-                    <div class="row justify-content-md-center align-items-center">
-                        ó
-                    </div>
-                    <div class="row justify-content-md-center align-items-center">
-                        <a class="btn btn-primary" title="Importar temas desde un archivo." data-toggle="modal" data-target="#cargarExcel">Importar tema(s)</a>
-                    </div>
+                </div>
+            </div>
+        </form>
+
+        <!-- En caso de que no existan temas se despliega un card con un mensaje -->
+    {{else}}
+        <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3 p-1">
+            <div class="card" style="height:14rem;">
+                <div class="card-body">
+                    <h5 class="card-title">No hay temas existentes en este grupo.</h5>
+                    <p class="card-text">Agregue un tema.</p>
+                </div>
+            </div>
+        </div>
+    {{/each}}
+
+    <!-- Card fija para la creación de un grupo -->
+    <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3 p-1">
+        <div class="card" style="height:14rem;">
+            <div class="card-body justify-content-center align-center">
+                <div class="row justify-content-center align-items-center">
+                    <h5 class="card-title">Nuevo tema</h5>
+                </div>
+                <div class="row justify-content-md-center align-items-center">
+                    <a class="btn btn-success" href="/tema/nuevo-tema/{{idgrupo}}" title="Agregar un tema de forma manual.">Agregar tema</a>
+                </div>
+                <div class="row justify-content-md-center align-items-center">
+                    ó
+                </div>
+                <div class="row justify-content-md-center align-items-center">
+                    <a class="btn btn-primary" title="Importar temas desde un archivo." data-toggle="modal" data-target="#cargarExcel">Importar tema(s)</a>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
-    <!-- modals -->
-    <form action="/tema/importar/{{idgrupo}}" method="POST" enctype="multipart/form-data" novalidate>
-        <div class="modal fade" id="cargarExcel" tabindex="-1" aria-labelledby="cargarExcel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="cargarExcelLabel">Importar lista</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <p style="text-align:justify;">
-                            Asegúrese de que el archivo a importar ha sido descargado directamente del sistema búho, este no debe contener
-                            ninguna modificación previa y debe contar con la extensión o terminación .asp
-                        </p>
-                        <div class="input-group mb-3">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="inputGroupFileAddon">Selección</span>
-                            </div>
-                            <div class="custom-file">
-                                <input type="file" class="custom-file-input" name="archivo" id="archivo" aria-describedby="inputGroupFileAddon" accept=".asp, .html">
-                                <label class="custom-file-label" for="inputGroupFile" data-browse="Buscar">Archivo</label>
-                            </div>
+<!-- modals -->
+<form action="/tema/importar/{{idgrupo}}" method="POST" enctype="multipart/form-data" novalidate>
+    <div class="modal fade" id="cargarExcel" tabindex="-1" aria-labelledby="cargarExcel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="cargarExcelLabel">Importar lista</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p style="text-align:justify;">
+                        Asegúrese de que el archivo a importar ha sido descargado directamente del sistema búho, este no debe contener
+                        ninguna modificación previa y debe contar con la extensión o terminación .asp
+                    </p>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="inputGroupFileAddon">Selección</span>
                         </div>
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input" name="archivo" id="archivo" aria-describedby="inputGroupFileAddon" accept=".asp, .html">
+                            <label class="custom-file-label" for="inputGroupFile" data-browse="Buscar">Archivo</label>
+                        </div>
+                    </div>
 
-                    </div>
-                    <div class="modal-footer">
-                        <a type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</a>
-                        <button type="submit" class="btn btn-primary">Siguiente</button>
-                    </div>
+                </div>
+                <div class="modal-footer">
+                    <a type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</a>
+                    <button type="submit" class="btn btn-primary">Siguiente</button>
                 </div>
             </div>
         </div>
-    </form>
-
-</div>
+    </div>
+</form>
