Refactorización de código.

--- a/views/grupo/datosgrupo.hbs
+++ b/views/grupo/datosgrupo.hbs
@@ -14,7 +14,7 @@
 
     <!-- Cuerpo del archivo -->
     <h1 class="display-6">Datos del grupo</h1>
-    <form class="needs-validation" action="/grupo/wizard-crear-grupo-manual/{{archivo}}" method="POST" novalidate>
+    <form class="needs-validation" action="/grupo/crear-grupo/{{archivo}}" method="POST" novalidate>
         <div class="row">
             <div class="col">
                 <label for="asignatura" class="form-label">Asignatura</label>
@@ -56,7 +56,7 @@
 
                 <button class="btn btn-primary" type="submit">Siguiente</button>
 
-                <a class="btn btn-outline-primary" href="/grupo/wizard-crear-grupo-manual">
+                <a class="btn btn-outline-primary" href="/grupo/crear-grupo">
                     Limpiar
                 </a>
                 <a class="btn btn-danger align-right" href="/" role="button">Cancelar</a>
