--- a/views/grupo/inicio-wizard.hbs
+++ b/views/grupo/inicio-wizard.hbs
@@ -29,7 +29,7 @@
                 <button class="btn badge-primary btn-lg" id="guardar" name="guardar" data-toggle="modal"
                         data-target="#cargarExcel">Importar desde Archivo
                 </button>
-                <a class="btn btn-primary btn-lg" href="/grupo/wizard-crear-grupo-manual" role="button">Crear
+                <a class="btn btn-primary btn-lg" href="/grupo/crear-grupo" role="button">Crear
                     Manualmente</a>
                 <a class="btn btn-danger btn-lg align-right" href="/" role="button">Cancelar</a>
             </p>
