--- a/views/alumno/grid-alumnos.hbs
+++ b/views/alumno/grid-alumnos.hbs
@@ -96,6 +96,7 @@
     {{/ifeq}}
 </div>
 <script src="/js/llenar-tabla-helper.js"></script>
+<script src="/js/grid-alumnos-helper.js"></script>
 
 </body>
 
