Solucion del parametro add en redirecciones

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -171,8 +171,8 @@
                 <div class="card" style="height:28rem ">
                     <div class="card-body">
                         {{#iflogico estado '!=' 2}}
-                            <h5 class="card-title">No hay grupos existentes.</h5>
-                            <p class="card-text">Agregue un grupo.</p>
+                            <h5 class="card-title text-center">No hay grupos existentes.</h5>
+                            <p class="card-text text-center">Agregue un grupo.</p>
                         {{else}}
                             <h5 class="card-title text-center">No hay grupos en la papelera de reciclaje.</h5>
 
