--- a/views/index.hbs
+++ b/views/index.hbs
@@ -186,7 +186,7 @@
                 <div class="card" style="height:28rem; ">
                     <div class="card-body justify-content-center align-center">
 
-                        <div class="row justify-content-center align-items-center">
+                        <div class="row text-center align-items-center">
                             <h5 class="card-title">Agregar nuevo grupo</h5>
                         </div>
                         <div class="row justify-content-md-center align-items-center">
