Validación al editar, no aceptar campos vacios

--- a/views/actividad/actividad-nuevo.hbs
+++ b/views/actividad/actividad-nuevo.hbs
@@ -26,7 +26,7 @@
                 <option value="Cuadro Sinoptico">Cuadro Sinoptico</option>
                 <option value="Mapa Mental">Mapa Mental</option>
                 <option value="Ejercicios">Ejercicios</option>
-                <option value="Ejercicios">Examen</option>
+                <option value="Examen">Examen</option>
                 <option value="Otros">Otros</option>
             </select>
         </div>
