--- a/views/alumno/vista-grupo-alumnos.hbs
+++ b/views/alumno/vista-grupo-alumnos.hbs
@@ -149,7 +149,7 @@
                            data-advanced-search="true" data-filter-control="true" name="table">
                         <thead>
                         <tr>
-                            <th data-field="no_unidad" data-sorteable="false" class="column">Clave</th>
+                            <th data-field="no_unidad" data-sorteable="false" class="column">No.</th>
                             <th data-field="nombre" data-sorteable="false" class="column">Nombre</th>
                             <th data-field="califinal" class="column">Calif. Final</th>
                         </tr>
