--- a/views/calificacion/vista-grupo-calificaciones.hbs
+++ b/views/calificacion/vista-grupo-calificaciones.hbs
@@ -48,7 +48,7 @@
         <div class="row-cols-1">
             <div class="col-auto d-flex flex-row-reverse p-3">
                 <div id="toolbar">
-
+                    <h3>{{tema.dataValues.nombre}}</h3>
                 </div>
             </div>
         </div>
